--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
+}
+
+html, body, #root, .App {
+  height: 100%;
+  overflow: hidden;
 }
 
 code {
